--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,10 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  toastify_flutter:
-    path: ../
-    # git:
-    #   url: https://github.com/cristianlag97/FlutterToastify
+  toastify_flutter: 0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
