Added specific methods: success, info, warning, and error for more advanced customization.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  toastify_flutter: 0.3.0
+  toastify_flutter:
+    path: ../
 
 
   # The following adds the Cupertino Icons font to your application.
